Fix swagger and data test + openapiSpec
